--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ description = "Pythonic OpenGL Bindings"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "numpy",
-    "pyopengl",
-    "pyglsl",
-    "pillow",
+    "pyopengl==3.1.9",
+    "pyglsl==0.0.7",
+    "pillow==11.1.0",
+    "slimrr==0.1.0"
 ]
 classifiers = [
     "Natural Language :: English",
